fixed wordsArray - phrases fixtures

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,7 +15,7 @@
 .phrase-wrapper {
   border-radius: 18px;
   background: #545454;
-  margin: 5px 10px;
+  margin: 12px;
   /*padding: 8px 15px;*/
   box-sizing: border-box;
   display: inline-block;
