--- a/app/components/Uidev/Uidev.css
+++ b/app/components/Uidev/Uidev.css
@@ -1,11 +1,11 @@
-.nav {
+.nav-1 {
   background-color: #282828;
   margin: 0;
   box-sizing: border-box;
   height: 44px;
   top: 0;
   position: fixed;
-  z-index: 200;
+  z-index: 210;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,6 +48,13 @@
   padding-left: 42px;
   padding-right: 42px;
  }
+
+.nav-1 ul, .nav-2 ul, .nav-3 ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+}
 
  .button {
   margin: 10px
